---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"[1, \"two\", [3]]\"#)"
---
Expr {
    kind: Tuple(
        Tuple {
            elements: [
                Expr(
                    Expr {
                        kind: Num(
                            Num {
                                value: "1",
                            },
                        ),
                        span: 1..2,
                        inferred_type: None,
                    },
                ),
                Expr(
                    Expr {
                        kind: Str(
                            Str {
                                span: 4..9,
                                value: "two",
                            },
                        ),
                        span: 4..9,
                        inferred_type: None,
                    },
                ),
                Expr(
                    Expr {
                        kind: Tuple(
                            Tuple {
                                elements: [
                                    Expr(
                                        Expr {
                                            kind: Num(
                                                Num {
                                                    value: "3",
                                                },
                                            ),
                                            span: 12..13,
                                            inferred_type: None,
                                        },
                                    ),
                                ],
                            },
                        ),
                        span: 11..14,
                        inferred_type: None,
                    },
                ),
            ],
        },
    ),
    span: 0..15,
    inferred_type: None,
}
